[package]
name = "maze"
description = "A simple maze generator using a randomized depth-first search algorithm."
repository = "https://github.com/donmccaughey/donm_cc"
license = "BSD-2-Clause"
version = "0.1.0"
edition = "2021"

[lib]
name = "maze"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "maze"
path = "src/main.rs"

[dependencies]
getrandom = { version = "0.2.8", features = ["js"] }
oorandom = "11.1.3"
wasm-bindgen = "0.2.84"
